@@ -64,7 +64,7 @@ class ClientDatagramCodecTest {
         codec.decode(ctx, new DatagramPacket(encodeResponse.toByteBuf(), address, address), out1);
 
         assertEquals(1, out1.size());
-        final RadiusResponse actual = (RadiusResponse) out1.getFirst();
+        final RadiusResponse actual = (RadiusResponse) out1.get(0);
         assertEquals(encodeResponse.toString(), actual.toString()); // should still be encoded
     }
 
@@ -118,7 +118,7 @@ class ClientDatagramCodecTest {
         codec.encode(ctx, new PendingRequestCtx(accessRequest, endpoint, promise), out1);
 
         assertEquals(1, out1.size());
-        final AccessRequestPap sentAccessPacket = (AccessRequestPap) fromDatagram(dictionary, (DatagramPacket) out1.getFirst())
+        final AccessRequestPap sentAccessPacket = (AccessRequestPap) fromDatagram(dictionary, (DatagramPacket) out1.get(0))
                 .decodeRequest(secret);
 
         // check user details correctly encoded
